# c_fingerProcess

./: CMakeLists.txt  compile.sh  readme.txt
demos/: fvs_binarize.c  fvs_createtestimages.c  fvs_direction.c  fvs_enhancer.c  fvs_mask.c  fvs_minutia.c  fvs_thinner.c
include/: file.h  file_port.h  fvs.h  fvstypes.h
src/: file.c  file_port.c  floatfield.c  image.c  imagemanip.c  img_base.c  img_enhance.c  img_thin.c  minutia.c  version.c
